--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@
 @import url(./fonts.css);
 /* import css variables */
 @import url(./partials/_variables.css);
-
+/* import global css */
+@import url(./partials/_global.css);
 
 /* navbar starts */
 .header_area .main-menu .navbar .navbar-brand{
@@ -12,12 +13,12 @@
     padding: 1rem 20rem;
 }
 .header_area .main-menu .nav-item .nav-link{
-    font: normal 500 15px/2px var(--roboto);
+    font: normal 500 15px/5px var(--roboto);
     text-transform: uppercase;
     padding: 1.7rem;
     color: var(--title-color);
 }
-.header_area .main-menu .navbar-nav .active a{
+.header_area .main-menu .navbar-nav.active a{
     background: var(--gradient-color);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -30,5 +31,31 @@
     background-clip: text;
 }
 /* banner starts */
+.site-main .site-banner .site-title h3{
+   padding-top: 35%;
+   font-weight: 500;
+}
+.site-main .site-banner .site-title h3::after{
+    content: "";
+    height: 2px;
+    Width: 16vw;
+    background:black;
+    display: inline-block;
+    margin-left: 3%;
+    transform: translateY(-4px);
+}
+.site-main .site-banner .site-title h1{
+    font-size:5rem;
+}
+.site-main .site-banner .site-title h4{
+    font-size:1.5rem;
+}
+.site-main .site-banner .banner-image > img{
+    padding: 14rem 0;
+    width: 40rem;
+    margin-left: -8%;
+}
 
+/* banner ends */
+/* banner ends */
 /* banner ends */
