--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,44 @@
     width: 40rem;
     margin-left: -8%;
 }
+/* About area */
+.site-main .about-area{
+    padding:8rem 8rem;
+}
+.site-main .about-area .about-image> img{
+    padding: 0rem 0;
+    width: 40rem;
+    margin-left: 15%;
+    border-radius: 50%;
+}
+.site-main .about-area .about-image> img:hover{
+  /* Starts the shake animation and make the animation last for 0.5 seconds */
+  animation: shake 0.5s;
 
-/* banner ends */
+  /* When the animation is finished, start again */
+  animation-iteration-count: infinite;
+}
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+.site-main .about-area .about-title h2 > span{
+    display: block;
+    font: normal bold 49px/60px var(--roboto);
+    letter-spacing: 21px;
+}
+.site-main .about-area .about-title .paragraph > p{
+    padding: 2rem 0;
+
+}
 /* banner ends */
 /* banner ends */
