--- a/css/partials/_variables.css
+++ b/css/partials/_variables.css
@@ -1,5 +1,4 @@
 
-
 html,body{
     margin: 0%;
     box-sizing: border-box;
@@ -16,7 +15,7 @@ html,body{
     --border-color: #201f1f17;
     --gradient-color: linear-gradient(90deg, #4458dc 0%, #854fee 100%);
     --shadow-color: 0px, 10px 30px rgba(118, 85, 225, 0.3);
-    --box-color: 0px, 10px 30px rgba(57, 56, 61, 0.205);
+    --box-shadow: 0px, 10px 30px rgba(56, 56, 58, 0.205);
 
     /* font family variables*/
     --roboto: "Roboto";
