Projects area & css edits

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -2,6 +2,6 @@
 
 /* @font-face */
 @font-face {
-    font-family:'Joan' ;
-    src: '/fonts/Joan/Joan.ttf';
+    font-family:'Roboto';
+    src: '/fonts/Roboto/Roboto-Regular.ttf';
 }
