--- a/css/partials/_variables.css
+++ b/css/partials/_variables.css
@@ -18,5 +18,5 @@ html,body{
     --box-shadow: 0px, 10px 30px rgba(77, 76, 80, 0.205);
 
     /* font family variables*/
-    --roboto: "Roboto";
+    --roboto: 'Roboto', normal;
 }
